Potential fix to the sidebar issue on mobile where it goes under stuff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,11 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
 }
 
 .react-calendar {
